Fix Web Study Files

--- a/Documents/Web Application/Applications/hossam&mahmoud exam task/Task 3/about.html
+++ b/Documents/Web Application/Applications/hossam&mahmoud exam task/Task 3/about.html
@@ -14,7 +14,7 @@
             <h1>cars.</h1>
             <div class=wst>
             <div class="list">
-                <a href="new2.html" class="home ">Home</a>
+                <a href="index.html" class="home ">Home</a>
                 <a href="about.html" class="About active">About</a>
                 <a href="#" class="Reveiw ">Reveiw</a>
                 <a href="#" class="Featured ">Featured</a>
